# Lab4_OS

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  mainwindow.cpp  mainwindow.h  moc_mainwindow.cpp  temperature_gui  temperature_gui.pro
include/: circular_buffer.h  database.h
src/: main.cpp  simulator.cpp
web/: index.html
